--- a/web-dev/style.css
+++ b/web-dev/style.css
@@ -1,6 +1,89 @@
 body {
-    max-width: 1000px;
+    /* max-width: 1000px; */
     margin: auto;
-    background: #FAFAFA;
-    font-family: Helvetica;
+    background: #fdfafd;
+    font-family: cursive;
+    text-align: center;
+}
+
+.topnav {
+    background-color: #F7F3EF;
+    overflow: hidden;
+    text-align: center;
+
+}
+
+.topnav a {
+    text-align: center;
+    font-size: 40px;
+    padding: 120px 120px;
+
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #DAD6D6;
+}
+
+li {
+    list-style-type: none;
+    display: inline-block;
+}
+
+h1 {
+    font-size: 50px;
+    padding-top: 50px;
+}
+
+.collage {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 5vw);
+    grid-gap: 15px;
+    padding-top: 50px;
+}
+
+.collage img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.collage_1 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.collage_2 {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.collage_3 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.collage_4 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    grid-row-end: 6;
+}
+
+.collage_5 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 3;
+    grid-row-end: 6;
 }
